infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: galadril
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: api-waypoint
    pod-security.kubernetes.io/enforce: restricted
