infrastructure/kubernetes/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      serviceAccountName: gateway
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
      containers:
      - name: gateway
        image: ghcr.io/aeluin-technologies/galadril-gateway:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: connectors
          mountPath: /etc/galadril
          readOnly: true
        - name: tmp
          mountPath: /tmp
        - name: schemas
          mountPath: /schemas/avro
          readOnly: true
        - name: spicedb-schema
          mountPath: /schemas/spicedb
          readOnly: true
        ports:
        - name: http
          containerPort: 8081
        startupProbe:
          httpGet:
            path: /healthz
            port: 8081
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          periodSeconds: 5
      volumes:
      - name: connectors
        secret:
          secretName: gateway-connectors
      - name: tmp
        emptyDir: {}
      - name: schemas
        configMap:
          name: galadril-schemas
      - name: spicedb-schema
        configMap:
          name: galadril-spicedb-schema
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    istio.io/ingress-use-waypoint: 'true'
spec:
  selector:
    app.kubernetes.io/name: gateway
  ports:
  - name: http
    appProtocol: http
    port: 8081
    targetPort: 8081
