infrastructure/kubernetes/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      serviceAccountName: registry
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
      containers:
      - name: registry
        image: ghcr.io/aeluin-technologies/galadril-registry:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: connectors
          mountPath: /etc/galadril
          readOnly: true
        - name: tmp
          mountPath: /tmp
        - name: schemas
          mountPath: /schemas/avro
          readOnly: true
        - name: spicedb-schema
          mountPath: /schemas/spicedb
          readOnly: true
        ports:
        - name: grpc
          containerPort: 50053
        startupProbe:
          grpc:
            port: 50053
          failureThreshold: 60
          periodSeconds: 5
        readinessProbe:
          grpc:
            port: 50053
          periodSeconds: 5
      volumes:
      - name: connectors
        secret:
          secretName: registry-connectors
      - name: tmp
        emptyDir: {}
      - name: schemas
        configMap:
          name: galadril-schemas
      - name: spicedb-schema
        configMap:
          name: galadril-spicedb-schema
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    istio.io/ingress-use-waypoint: 'true'
spec:
  selector:
    app.kubernetes.io/name: registry
  ports:
  - name: grpc
    appProtocol: grpc
    port: 50053
    targetPort: 50053
