infrastructure/kubernetes/scribe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribe
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scribe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scribe
    spec:
      serviceAccountName: scribe
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
      containers:
      - name: scribe
        image: ghcr.io/aeluin-technologies/galadril-scribe:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 512Mi
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        ports:
        - name: http
          containerPort: 8091
        startupProbe:
          httpGet:
            path: /healthz
            port: 8091
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8091
          periodSeconds: 5
      volumes:
      - name: tmp
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: scribe
  labels:
    istio.io/ingress-use-waypoint: 'true'
spec:
  selector:
    app.kubernetes.io/name: scribe
  ports:
  - name: http
    appProtocol: http
    port: 8091
    targetPort: 8091
