infrastructure/kubernetes/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-waypoint
  labels:
    istio.io/waypoint-for: all
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: proxy-defaults
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
